--- a/chrome-chatgpt-prompt-optimizer/manifest.json
+++ b/chrome-chatgpt-prompt-optimizer/manifest.json
@@ -11,13 +11,18 @@
   "permissions": ["activeTab"],
   "host_permissions": [
     "https://api.groq.com/*",
-    "https://chat.openai.com/*"
+    "https://chat.openai.com/*",
+    "https://chatgpt.com/*"
   ],
   "content_scripts": [
     {
-      "matches": ["https://chat.openai.com/*"],
+      "matches": [
+        "https://chat.openai.com/*",
+        "https://chatgpt.com/*"
+      ],
       "js": ["content.js"],
       "run_at": "document_idle"
     }
   ]
 }
+
